--- a/frontend/src/app/features/espacios/espacio-list/espacios.page.component.scss
+++ b/frontend/src/app/features/espacios/espacio-list/espacios.page.component.scss
@@ -6,12 +6,12 @@ button.btn {
 }
 
 .modal-header.custom-danger {
-  background-color: #f26570; /* rojo claro */
-  color: #ffffff; /* texto rojo Bootstrap */
+  background-color: #f26570;
+  color: #ffffff;
 }
 
 .btn-danger-light {
-  background-color: #f26570; /* rojo claro */
+  background-color: #f26570;
   color: #ffffff;
   border: none;
 }
