--- a/frontend/src/app/features/usuarios/usuario-form/usuario-form.component.scss
+++ b/frontend/src/app/features/usuarios/usuario-form/usuario-form.component.scss
@@ -1,5 +1,5 @@
 .container-fluid {
-  padding-top: 1rem !important; // más pequeño que py-4
+  padding-top: 1rem !important;
 }
 
 .title-underline {
