--- a/frontend/src/app/features/espacios/espacio-form/espacio.form.component.scss
+++ b/frontend/src/app/features/espacios/espacio-form/espacio.form.component.scss
@@ -1,12 +1,11 @@
 .espacio-form-card {
-  max-width: 800px; // ajusta el ancho total
+  max-width: 800px;
   width: 100%;
   margin: 0 auto;
   border: 1px solid #e6e6e6;
   background: #fff;
   transition: all 0.3s ease-in-out;
 
-  // centrado automático en horizontal
   margin-left: auto;
   margin-right: auto;
 
