--- a/frontend/src/app/features/reservas/reserva-list/reservas.page.component.html
+++ b/frontend/src/app/features/reservas/reserva-list/reservas.page.component.html
@@ -1,10 +1,10 @@
 <div class="container py-4">
-  <div
-    class="mb-4 d-flex align-items-center gap-2 justify-content-center text-center"
+  <h2
+    class="mb-4 fw-semibold text-dark text-center"
+    style="font-family: 'Segoe UI', sans-serif; letter-spacing: 0.5px"
   >
-    <i class="bi bi-calendar-check fs-3 text-primary"></i>
-    <h2 class="mb-0 fw-semibold text-dark">Gestión de Reservas</h2>
-  </div>
+    <i class="bi bi-calendar-check fs-3 text-primary"></i> Gestión de Reservas
+  </h2>
 
   <div
     class="d-flex flex-column flex-md-row justify-content-between align-items-stretch align-items-md-center mb-3 gap-2"
