--- a/frontend/src/app/shared/header/header.component.html
+++ b/frontend/src/app/shared/header/header.component.html
@@ -64,6 +64,18 @@
         <li class="nav-item" *ngIf="auth.getRoleValue() === UserRol.EMPLEADO">
           <a
             class="nav-link d-flex align-items-center"
+            routerLink="/calendario-reservas"
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+          >
+            <i class="bi bi-calendar-range-fill me-1"></i> Calendario de
+            Reservas
+          </a>
+        </li>
+
+        <li class="nav-item" *ngIf="auth.getRoleValue() === UserRol.EMPLEADO">
+          <a
+            class="nav-link d-flex align-items-center"
             routerLink="/misreservas"
             routerLinkActive="active"
             [routerLinkActiveOptions]="{ exact: true }"
